.popup overflow fix

--- a/assets/css/ufr-blocks-editor.scss
+++ b/assets/css/ufr-blocks-editor.scss
@@ -58,9 +58,8 @@ $primary: #007cba;
     height: 300px;
     box-shadow: 0 0 10px rgba(112, 128, 144, 0.31);
     border-radius: 10px;
-    overflow-y: auto;
+    overflow: auto;
     z-index: 1;
-    overflow-x: hidden;
 
     .icon-wrapper {
       padding: 35px 0;
